--- a/CNS.htm
+++ b/CNS.htm
@@ -1,101 +1,119 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNS</title>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CNS</title>
 
   <style>
-  body{
-    background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
-    background-size: 100% 100%  ;
+    body {
+      background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
+      background-size: 100% 100%;
       background-repeat: no-repeat;
-  }
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-th, td {
-  padding: 10px;
-}
+    }
 
-table th {
-  background-color: #7DFDFE;
-  color:black;
-}
-</style>
+    table,
+    th,
+    td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+
+    th,
+    td {
+      padding: 10px;
+    }
+
+    table th {
+      background-color: #7DFDFE;
+      color: black;
+    }
+  </style>
 
 </head>
 
-  <body>
-   <h1>Computer Network and Security(CNS)</h1>
-    <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
-    <table>
-      <tr>
-        <th>SR NO</th>
-        <th>TOPIC</th>
-        <th>VIDEO LECTURE</th>
-      </tr>
-<tr>
-  <td></td>
-  <td>Introduction</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2euWGACJZAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td></tr>
-<tr>
-  <td>M1 L1</td>
-  <td>Principles of Network Applications <br> Network Application Architectures <br> Processes Communicating <br></td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/iYaykov_X4I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L2</td>
-  <td>Overview of HTTP <br> Non-Persistent and Persistent <br> Connections HTTP Message Format</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2hnbiMLQ7_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+<body>
+  <h1>Computer Network and Security(CNS)</h1>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
+  <table>
+    <tr>
+      <th>SR NO</th>
+      <th>TOPIC</th>
+      <th>VIDEO LECTURE</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Introduction</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2euWGACJZAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L1</td>
+      <td>Principles of Network Applications <br> Network Application Architectures <br> Processes Communicating <br></td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/iYaykov_X4I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L2</td>
+      <td>Overview of HTTP <br> Non-Persistent and Persistent <br> Connections HTTP Message Format</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2hnbiMLQ7_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
-</tr>
-<tr>
-  <td>M1 L3</td>
-  <td>Cookies, Web Cache and working of Web cache with Example.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ba6TGnZa66s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L4</td>
-  <td>Explains FTP Protocol in brief</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9W22JpbN9uM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L3</td>
+      <td>Cookies, Web Cache and working of Web cache with Example.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ba6TGnZa66s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L4</td>
+      <td>Explains FTP Protocol in brief</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9W22JpbN9uM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
-</tr>
-<tr>
-  <td>M1 L5</td>
-  <td>Explains e-Mail, SMTP Protocol.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VJMvLPR0HCo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L6</td>
-  <td>Basics of email system with example,comparison between smtp and http with example.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/QuX63NLPNXE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L7</td>
-  <td>Mail message structure,mail access protocol i.e POP3 and stages of POP3 with an example.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/amy-yxNpJgk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L8</td>
-  <td>Update stage of POP3 - Download and delete mode,download and keep mode with an example; <br> Mail access protocol- IMAP with an example & Web based email. </td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Q6gusYnIVcg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L9</td>
-  <td>Basics of Domain name system , overview of working of DNS with examples.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AWj_1oLqFdM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L10</td>
-  <td>Services of DNS with examples.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/f8NHYsyO1dU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-<tr>
-  <td>M1 L11</td>
-  <td>Distributed Hierarchical DNS databases with examples.</td>
-  <td><iframe width="150" height="150" src="https://www.youtube.com/embed/B6cvjN9ZUvM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-</tr>
-    </table>
-  </body>
+    </tr>
+    <tr>
+      <td>M1 L5</td>
+      <td>Explains e-Mail, SMTP Protocol.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VJMvLPR0HCo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L6</td>
+      <td>Basics of email system with example,comparison between smtp and http with example.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/QuX63NLPNXE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L7</td>
+      <td>Mail message structure,mail access protocol i.e POP3 and stages of POP3 with an example.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/amy-yxNpJgk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L8</td>
+      <td>Update stage of POP3 - Download and delete mode,download and keep mode with an example; <br> Mail access protocol- IMAP with an example & Web based email. </td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Q6gusYnIVcg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L9</td>
+      <td>Basics of Domain name system , overview of working of DNS with examples.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AWj_1oLqFdM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L10</td>
+      <td>Services of DNS with examples.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/f8NHYsyO1dU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L11</td>
+      <td>Distributed Hierarchical DNS databases with examples.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/B6cvjN9ZUvM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L12</td>
+      <td>Domain name system server caching, iterative query and recursive querying of DNS database with the real time example.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/NMdKXwhR0QE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L13</td>
+      <td>Different types of DNS records, DNS message formats and insertion of DNS records into DNS databases.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/q7RjW8r36Mk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+  </table>
+</body>
+
 </html>
