--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -54,10 +54,14 @@
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/KQIzmfAJh_I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-
+      <td>E1 L4</td>
+      <td>Insertion of values into the tables of library database including primary & foreign key values.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/XgMM2ZnUMcw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E1 L5</td>
+      <td>SQL Queries to delete rows, create view, partition the table,apply aggregate function and retrieve values based on grouping attribute library database.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/CdMxR_zubfA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
