--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -43,15 +43,21 @@
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fyeks5PtYM8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>E1 L1, L3</td>
-      <td>Creation and description of tables in library database containing primary keys,foreign keys,on delete cascade,datatypes in each table.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9Hlwb64dwZo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>E1 L1</td>
+      <td>Structure of library database describing entities,attributes and primary keys in each table.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Om3jDgsFvgc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>E1 L2</td>
       <td>Schema diagram and Entity relationship diagram of library database containing cardinality ratio, participation constraints.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/KQIzmfAJh_I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E1 L3</td>
+      <td>Creation and description of tables in library database containing primary keys,foreign keys,on delete cascade,datatypes in each table.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9Hlwb64dwZo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
     </tr>
     <tr>
       <td>E1 L4</td>
