--- a/index.htm
+++ b/index.htm
@@ -58,6 +58,7 @@ body{
 </style>
 
 <body>
+  <marquee>UPDATED:DBMS lab and CNS video Link.Kindly go through.</marquee>
   <div class="styl">
   <script type="text/javascript">
         document.write("<center><font size=+3 style='color: black;'>");
