--- a/index.htm
+++ b/index.htm
@@ -55,10 +55,75 @@ body{
      background-attachment: fixed;
      background-size: 100% 100%;
   }
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
 </style>
 
 <body>
   <marquee>UPDATED:DBMS lab and CNS video Link.Kindly go through.</marquee>
+  <table>
+    <tr>
+      <td style="border:none;">
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.htm">Home</a>
+    <a href="#">News</a>
+    <a href="#">Contact</a>
+  </div>
+  <span style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+  <script>
+  function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+  }
+
+  function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+  }
+  </script>
+</td>
+<td style="border:none;">
   <div class="styl">
   <script type="text/javascript">
         document.write("<center><font size=+3 style='color: black;'>");
@@ -76,6 +141,9 @@ body{
         document.write("</font></center>");
     </script>
   </div>
+</td>
+</tr>
+</table>
   <table>
     <tr>
       <td style="border:none;">
