--- a/UP.htm
+++ b/UP.htm
@@ -42,7 +42,7 @@
     </tr>
     <tr>
       <td>M1 L1</td>
-      <td>UNIX ARCHITECTURE, FEATURES, <br>ENVIRONMENTS and POSIX standards.</td>
+      <td>UNIX ARCHITECTURE, FEATURES, ENVIRONMENTS and POSIX standards.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
@@ -52,14 +52,14 @@
     </tr>
     <tr>
       <td>M1 L3</td>
-      <td> Combining commands, <br>oot login, su, concept of files.
+      <td> Combining commands, root login, su, concept of files.
 </td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/yjTBiAViPW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L4</td>
-      <td>Command structure,<br> types of command and basic unix command standards.</td>
+      <td>Command structure, types of command and basic unix command standards.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
