--- a/CNL.htm
+++ b/CNL.htm
@@ -53,16 +53,12 @@
 
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>E1 L3</td>
+      <td>Cryptography,types and RSA Algorithm</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/RIDBSl_0v7M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
+
   </table>
 </body>
 
