--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@ body{
 </style>
 
 <body>
-  <marquee>UPDATED:DBMS lab and CNS video Link.Kindly go through.</marquee>
+  <marquee>UPDATED:CNS lab L3 and RPA (Email automation) video link. Kindly go through.</marquee>
   <table>
     <tr>
       <td style="border:none;">
