--- a/index.htm
+++ b/index.htm
@@ -109,7 +109,7 @@ body{
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
     <a href="#">News</a>
-    <a href="#">Contact</a>
+    <a href="CONTACT.htm">Contact</a>
   </div>
   <span style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
