--- a/CONTACT.htm
+++ b/CONTACT.htm
@@ -7,7 +7,7 @@
     <style media="screen">
     body{
       background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
-      background-size: 300%  ;
+      background-size: 100% 100%  ;
         background-repeat: no-repeat;
     }
     </style>
