--- a/CONTACT.htm
+++ b/CONTACT.htm
@@ -7,12 +7,12 @@
     <style media="screen">
     body{
       background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
-      background-size: 110%  ;
+      background-size: 100% 100% ;
         background-repeat: no-repeat;
     }
     </style>
   </head>
   <body>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSezKFiokL86PGRAMnuC0NjOhkseVnupfncs5DFaXVy0R02Bdw/viewform?embedded=true" width="400" height="400" frameborder="0" marginheight="0" marginwidth="100">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSezKFiokL86PGRAMnuC0NjOhkseVnupfncs5DFaXVy0R02Bdw/viewform?embedded=true" width="500" height="500" frameborder="0" marginheight="0" marginwidth="100">Loading…</iframe>
   </body>
 </html>
