--- a/CONTACT.htm
+++ b/CONTACT.htm
@@ -7,7 +7,7 @@
     <style media="screen">
     body{
       background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
-      background-size: 100% 100% ;
+      background-size: 100%  ;
         background-repeat: no-repeat;
     }
     </style>
