--- a/CONTACT.htm
+++ b/CONTACT.htm
@@ -10,6 +10,7 @@
       background-size: contain;
         background-repeat: no-repeat;
              background-attachment: fixed;
+             background-size: cover;
     }
     </style>
   </head>
