--- a/RPA.htm
+++ b/RPA.htm
@@ -9,7 +9,10 @@
   body{
     background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
     background-size: 100%   ;
+    background-size: contain;
       background-repeat: no-repeat;
+           background-attachment: fixed;
+           background-size: cover;
   }
     table,
     th,
