--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,18 @@ body{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
-
+  header {
+   background-color: #b6eb7a;
+    padding: 20px;
+  border:none;
+    font-size: 20px;
+  }
+  footer{
+    text-align: left;
+    padding: 5px;
+    background-color: #b6eb7a;
+    color: white;
+  }
 </style>
 
 <body>
