--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 </head>
 <style>
 body{
-  background-color: #f7f7ee;
+  background-color: red;
 }
   table {
     font-family: arial, sans-serif;
@@ -24,7 +24,7 @@ body{
 
 
   table th {
-    background-color: #7DFDFE;
+    background-color: white;
     color:black;
   }
 
@@ -51,7 +51,7 @@ body{
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #b6eb7a;
+    background-color: black;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -87,18 +87,7 @@ body{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
-  header {
-   background-color: #b6eb7a;
-    padding: 20px;
-  border:none;
-    font-size: 20px;
-  }
-  footer{
-    text-align: left;
-    padding: 5px;
-    background-color: #b6eb7a;
-    color: white;
-  }
+
 </style>
 
 <body>
@@ -113,9 +102,6 @@ body{
     <a href="CONTACT.htm">Contact</a>
   </div>
 
-  <header>
-    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-  </header>
 
   <script>
   function openNav() {
@@ -198,9 +184,7 @@ body{
   <!-- hitwebcounter Code START -->
   <a href="https://www.hitwebcounter.com" target="_blank">
     <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" /></a>
-<footer>
-  External links
-</footer>
+
   </body>
 
 </html>
