--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 </head>
 <style>
 body{
-  background-color: red;
+  background-color: #f7f7ee;
 }
   table {
     font-family: arial, sans-serif;
@@ -87,6 +87,12 @@ body{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
+  header {
+   background-color: #b6eb7a;
+    padding: 20px;
+  border:none;
+    font-size: 20px;
+  }
 
 </style>
 
@@ -101,7 +107,12 @@ body{
     <a href="#">News</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
+  <header>
 
+    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+
+
+  </header>
 
   <script>
   function openNav() {
