--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@ body{
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: #b6eb7a;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -93,7 +93,12 @@ body{
   border:none;
     font-size: 20px;
   }
-
+  footer {
+    text-align: center;
+    padding: 5px;
+    background-color: #b6eb7a;
+    color: white;
+  }
 </style>
 
 <body>
@@ -192,10 +197,13 @@ body{
       <td><a href="RPA.htm">RPA</a></td>
     </tr>
   </table>
+  <footer>
   <!-- hitwebcounter Code START -->
   <a href="https://www.hitwebcounter.com" target="_blank">
     <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" /></a>
 
+  External Links.
+</footer>
   </body>
 
 </html>
