--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,7 @@ body{
     text-align: center;
     padding: 5px;
     background-color: #b6eb7a;
-    color: white;
+    color: black;
   }
 </style>
 
@@ -198,6 +198,7 @@ body{
     </tr>
   </table>
   <footer>
+    <strong>  External Links.</strong><br>
   <!-- hitwebcounter Code START -->
   <a href="https://www.hitwebcounter.com" target="_blank">
     <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" /></a>
