--- a/index.htm
+++ b/index.htm
@@ -102,7 +102,7 @@ body{
 </style>
 
 <body>
-  <marquee>UPDATED:CNS lab L3 and RPA (Email automation) video link. Kindly go through.</marquee>
+
   <table>
     <tr>
       <td style="border:none;">
@@ -113,11 +113,10 @@ body{
     <a href="CONTACT.htm">Contact</a>
   </div>
   <header>
-
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-
-
   </header>
+
+  <marquee>Stay home stay safe.</marquee>
 
   <script>
   function openNav() {
