--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,6 @@ body{
     font-size: 20px;
   }
   footer {
-    text-align: center;
     padding: 5px;
     background-color: #b6eb7a;
     color: black;
@@ -197,13 +196,11 @@ body{
     </tr>
   </table>
   <footer>
-    <strong>  External Links.</strong><br>
-  <!-- hitwebcounter Code START -->
-  <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" /></a>
-
-  External Links.
-</footer>
+    <span style="text-align:left;"> External Links.</span>
+  <div style="text-align:center;">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" />
+    </div>
+  </footer>
   </body>
 
 </html>
