--- a/CNS.htm
+++ b/CNS.htm
@@ -113,6 +113,16 @@
       <td>Different types of DNS records, DNS message formats and insertion of DNS records into DNS databases.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/q7RjW8r36Mk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M1 L14</td>
+      <td>DNS message formats and insertion of DNS records into DNS databases, Steps to set up DNS server.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/hpqXEIErQU4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L15</td>
+      <td>Peer to peer file distribution, client -server vs peer to peer application & distribution time.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/OnKbCh1xsjU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
