--- a/ATC.htm
+++ b/ATC.htm
@@ -87,6 +87,21 @@
       <td>Converting NDFSM (NFA) to DFSM (DFA).</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ELSl-Ra_lpM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M1 L10</td>
+      <td>Minimizing DFSM.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/1tKCHxYNVHM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td> Regular Expressions (RE): what is a RE?</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/dKBpk4W94dg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Regular Expressions (RE): Kleene’s theorem, Conversion from Regular Expressions to FSM</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fHgGPP1xVmM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
