--- a/ADP.htm
+++ b/ADP.htm
@@ -97,6 +97,12 @@ and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VV14IR_j8qk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>List Data types, List definition, List access with indexing (Postive/negative), List traversal with for statement, List slices and slice operator (:), Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/WJPmzuAiDZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
   </table>
 
 </body>
