--- a/UP.htm
+++ b/UP.htm
@@ -63,10 +63,14 @@
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-
+      <td>M1 L5</td>
+      <td>directory commands, mkdir, rmdir, cd, pwd.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/GbN8jG6aFI4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L6</td>
+      <td>File related commands such as cp, mv, rm, od and cat.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/X6O3CciyzTQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
