--- a/index.htm
+++ b/index.htm
@@ -115,7 +115,7 @@ body{
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee>Stay home stay safe.</marquee>
+  <marquee>CNS,ATC,UP,ADP,DBMS Lab. Links are updated. Kindly go through.</marquee>
 
   <script>
   function openNav() {
