--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@ body{
   }
   footer {
     padding: 5px;
-    background-color: #b6eb7a;
+    background-color: #17706e;
     color: black;
   }
 </style>
