--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 <style>
 body{
   background-color: #f7f7ee;
+  margin: 0;
 }
   table {
     font-family: arial, sans-serif;
@@ -89,7 +90,7 @@ body{
   }
   header {
    background-color: #b6eb7a;
-    padding: 20px;
+    padding: 10px;
   border:none;
     font-size: 20px;
   }
