--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,12 @@
 
 </head>
 <style>
-body{
-  background-color: #f7f7ee;
-  margin: 0;
-}
+  body {
+    background-color: #f7f7ee;
+    margin: 0;
+    padding: 0;
+  }
+
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -26,7 +28,7 @@ body{
 
   table th {
     background-color: white;
-    color:black;
+    color: black;
   }
 
   a:link {
@@ -85,15 +87,22 @@ body{
   }
 
   @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav {
+      padding-top: 15px;
+    }
+
+    .sidenav a {
+      font-size: 18px;
+    }
   }
+
   header {
-   background-color: #b6eb7a;
+    background-color: #b6eb7a;
     padding: 10px;
-  border:none;
+    border: none;
     font-size: 20px;
   }
+
   footer {
     padding: 5px;
     background-color: #17706e;
@@ -106,102 +115,102 @@ body{
   <table>
     <tr>
       <td style="border:none;">
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.htm">Home</a>
-    <a href="#">News</a>
-    <a href="CONTACT.htm">Contact</a>
-  </div>
-  <header>
-    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-  </header>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.htm">Home</a>
+          <a href="#">News</a>
+          <a href="CONTACT.htm">Contact</a>
+        </div>
+        <header>
+          <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+        </header>
 
-  <marquee>CNS,ATC,UP,ADP,DBMS Lab. Links are updated. Kindly go through.</marquee>
+        <marquee>CNS,ATC,UP,ADP,DBMS Lab. Links are updated. Kindly go through.</marquee>
 
-  <script>
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-  }
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+          }
 
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-  }
-  </script>
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+          }
+        </script>
 
-  <script type="text/javascript">
-        document.write("<center><font size=+3 style='color: black;'>");
-        var day = new Date();
-        var hr = day.getHours();
-        if (hr >= 0 && hr < 12) {
+        <script type="text/javascript">
+          document.write("<center><font size=+3 style='color: black;'>");
+          var day = new Date();
+          var hr = day.getHours();
+          if (hr >= 0 && hr < 12) {
             document.write("Good Morning!");
-        } else if (hr == 12) {
+          } else if (hr == 12) {
             document.write("Good Noon!");
-        } else if (hr >= 12 && hr <= 17) {
+          } else if (hr >= 12 && hr <= 17) {
             document.write("Good Afternoon!");
-        } else {
+          } else {
             document.write("Good Evening!");
-        }
-        document.write("</font></center>");
-    </script>
+          }
+          document.write("</font></center>");
+        </script>
 
-  <table>
-    <tr>
-      <td style="border:none;">
-        <h2>WELCOME TO YOUTUBE LEARNING</h2>
-      </td>
-      <td style="border:none;"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
-    </tr>
-  </table>
-  <table>
-    <tr>
-      <th>SR NO</th>
-      <th>SUBJECT</th>
-    </tr>
-    <tr>
-      <td>1.</td>
-      <td><a href="ME.htm">Management and Entreprenuer for IT Industry (ME)</a></td>
-    </tr>
-    <tr>
-      <td>2.</td>
-      <td><a href="CNS.htm">Computer Network and Security</a></td>
-    </tr>
-    <tr>
-      <td>3.</td>
-      <td><a href="DBMS.htm">Database Management System</a></td>
-    </tr>
-    <tr>
-      <td>4.</td>
-      <td><a href="ATC.htm">Automata theory and computablilty</a></td>
-    </tr>
-    <tr>
-      <td>5.</td>
-      <td><a href="ADP.htm">Application development using python</a></td>
+        <table>
+          <tr>
+            <td style="border:none;">
+              <h2>WELCOME TO YOUTUBE LEARNING</h2>
+            </td>
+            <td style="border:none;"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <th>SR NO</th>
+            <th>SUBJECT</th>
+          </tr>
+          <tr>
+            <td>1.</td>
+            <td><a href="ME.htm">Management and Entreprenuer for IT Industry (ME)</a></td>
+          </tr>
+          <tr>
+            <td>2.</td>
+            <td><a href="CNS.htm">Computer Network and Security</a></td>
+          </tr>
+          <tr>
+            <td>3.</td>
+            <td><a href="DBMS.htm">Database Management System</a></td>
+          </tr>
+          <tr>
+            <td>4.</td>
+            <td><a href="ATC.htm">Automata theory and computablilty</a></td>
+          </tr>
+          <tr>
+            <td>5.</td>
+            <td><a href="ADP.htm">Application development using python</a></td>
 
-    </tr>
-    <tr>
-      <td>6.</td>
-      <td><a href="UP.htm">Unix programming</a></td>
-    </tr>
-    <tr>
-      <td>7.</td>
-      <td><a href="CNL.htm">Computer network laboratory</a></td>
+          </tr>
+          <tr>
+            <td>6.</td>
+            <td><a href="UP.htm">Unix programming</a></td>
+          </tr>
+          <tr>
+            <td>7.</td>
+            <td><a href="CNL.htm">Computer network laboratory</a></td>
 
-    </tr>
-    <tr>
-      <td>8.</td>
-      <td><a href="DBMSL.htm">DBMS laboratory</a></td>
-    </tr>
-    <tr>
-      <td>9.</td>
-      <td><a href="RPA.htm">RPA</a></td>
-    </tr>
-  </table>
-  <footer>
-    <span style="text-align:left;"> External Links.</span>
-  <div style="text-align:center;">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" />
-    </div>
-  </footer>
-  </body>
+          </tr>
+          <tr>
+            <td>8.</td>
+            <td><a href="DBMSL.htm">DBMS laboratory</a></td>
+          </tr>
+          <tr>
+            <td>9.</td>
+            <td><a href="RPA.htm">RPA</a></td>
+          </tr>
+        </table>
+        <footer>
+          <span style="text-align:left;"> External Links.</span>
+          <div style="text-align:center;">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" />
+          </div>
+        </footer>
+</body>
 
 </html>
