--- a/CNS.htm
+++ b/CNS.htm
@@ -123,6 +123,16 @@
       <td>Peer to peer file distribution, client -server vs peer to peer application & distribution time.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/OnKbCh1xsjU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M1 L16</td>
+      <td>Bit torrent application, file exchange among peers and tracking the peers in torrent.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EVVkIyNN0MQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L17</td>
+      <td>Distributed hash table(DHT), accessing DHT database, assigning peer id, storing key value pair within DHT database.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/-U52gEZSVw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
