--- a/UP.htm
+++ b/UP.htm
@@ -72,6 +72,11 @@
       <td>File related commands such as cp, mv, rm, od and cat.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/X6O3CciyzTQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>ls command with different options, ls -l and ls -d command, listing file attributes.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/8C_C2KEuMyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
