--- a/ATC.htm
+++ b/ATC.htm
@@ -102,6 +102,16 @@
       <td>Regular Expressions (RE): Kleene’s theorem, Conversion from Regular Expressions to FSM</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fHgGPP1xVmM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Kleene’s theorem, Conversion from FSM to Regular Expressions, Applications of REs.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EWDhL0QqNW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>Manipulating and Simplifying Regular Expressions.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/hQT8vdjqJug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
