--- a/ADP.htm
+++ b/ADP.htm
@@ -101,7 +101,36 @@ and Demonstrations.</td>
       <td>M2 L1</td>
       <td>List Data types, List definition, List access with indexing (Postive/negative), List traversal with for statement, List slices and slice operator (:), Programming examples and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/WJPmzuAiDZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Operations and Methods, Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/MGGRuGRku-E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Python Mutable and immutable data types, tuples, tuple assignment, advanced data type converting functions, references, passing references to functions, copy and deepcopy functions of copy module, Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/UfodigUdCp8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>Dictionary Data types, Dictionary definition, Key-Value pairs, Dictionary data access, Dictionary
+traversal with for statement, List vs. Dictionary, Programming examples and Demonstrations.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/t7BsOGnlXAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Dictionary methods, keys(), values(), items(), get(), setdefault, pprint module, checking key/value
+with in operator, Frequency counter problem, Programming examples and Demonstrations.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/7TAgHZUIZtA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td>Nested lists, Nesting of dictionaries, Modeling of real world things, Tic-Tac-Toe board model,
+Chessboard model and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jLEtxsjT88M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 
