--- a/ATC.htm
+++ b/ATC.htm
@@ -98,19 +98,29 @@
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/dKBpk4W94dg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L2</td>
-      <td>Regular Expressions (RE): Kleene’s theorem, Conversion from Regular Expressions to FSM</td>
+      <td>M2 L2.1</td>
+      <td>Kleene’s theorem, Conversion from Regular Expressions to FSM</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fHgGPP1xVmM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L3</td>
+      <td>M2 L2.2</td>
       <td>Kleene’s theorem, Conversion from FSM to Regular Expressions, Applications of REs.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EWDhL0QqNW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L4</td>
-      <td>Manipulating and Simplifying Regular Expressions.</td>
+      <td>M2 L3</td>
+      <td>Manipulating and Simplifying Regular Expressions</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/hQT8vdjqJug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4.1</td>
+      <td>Regular Grammar/ Right linear grammars, Regular grammar to FSM</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/nsx8uQwxr8Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4.2</td>
+      <td>FSM to Regular Grammar, Satisfying Multiple Criteria</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Vrz_m90nlck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
