--- a/CNS.htm
+++ b/CNS.htm
@@ -133,6 +133,21 @@
       <td>Distributed hash table(DHT), accessing DHT database, assigning peer id, storing key value pair within DHT database.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/-U52gEZSVw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M1 L17</td>
+      <td>Circular Distributed hash table(DHT), overlay to circular DHT, storing DHT within immediate successor peer  and peer churn.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/rtrZQm4XV3s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>Transport layer overview , services and protocols</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/RGlerBYUlDM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Transport layer service analogy, difference between Transport and network layer.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2dx9zfzt3V8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
