--- a/ME.htm
+++ b/ME.htm
@@ -62,7 +62,26 @@ table th {
       <td>Planning- Nature, Importance, Types of Plans.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/z0LGbr__VmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
-
+    <tr>
+      <td>M1 L6</td>
+      <td> Planning, Organization, Characteristics of Organization, Nature of Organization, Purpose of Organization are discussed.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fravUp2eLOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L7</td>
+      <td>Types of Organization: Formal organization,Informal organization, Line organization, Functional organization,  Line & Staff organization, Committee organization are discussed.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Vzh0b6_H6xg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L8</td>
+      <td>Staffing, Importance of Staffing, Recruitment's, Steps in Selection Procedure are discussed.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/E8FcUoV0yqs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>Meaning and nature of directing, principles of directing, elements of directing are discussed.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/uXYH7iIogYY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
   <p><strong>Note:</strong>L4 video is not there from L3 to L5 continuation(As advised by mam.)</p>
 </body>
