--- a/DBMS.htm
+++ b/DBMS.htm
@@ -61,10 +61,18 @@
     </tr>
     <tr>
       <td>M1 L5</td>
-      <td>Relationship & Relationship Set, Mapping Constraints(Cardinality ratio),Participation Constraints.
-</td>
+      <td>Relationship & Relationship Set, Mapping Constraints(Cardinality ratio),Participation Constraints.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fmzud3mz5cY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>Relational Model,Key constraints,Referential integrity constraints,characteristics of relation,update operations,Super key.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/K1YiF3ZWnco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Relational Algebra, select operation  , Project operation, Rename and Set theory operation.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/TQMl4B_ppdA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
