--- a/UP.htm
+++ b/UP.htm
@@ -77,6 +77,12 @@
       <td>ls command with different options, ls -l and ls -d command, listing file attributes.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/8C_C2KEuMyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Different file categories or ownership of a file, different file permissions for a file, changing file permission using relative, absolute and recursive manner.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ptxF9Fmg3k8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
