--- a/index.htm
+++ b/index.htm
@@ -125,7 +125,7 @@
           <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
         </header>
 
-        <marquee>CNS,ATC,UP,ADP,DBMS Lab. Links are updated. Kindly go through.</marquee>
+        <marquee>updated 29/09/2020 21:45PM</marquee>
 
         <script>
           function openNav() {
