--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,13 @@
 
 </head>
 <style>
+  * {
+    margin: -3;
+    padding: 0;
+  }
+
   body {
     background-color: #f7f7ee;
-    margin: 0;
-
   }
 
   table {
@@ -147,9 +150,9 @@
             document.write("Good Noon!");
           } else if (hr >= 12 && hr <= 17) {
             document.write("Good Afternoon!");
-          } else if(hr>17 && hr<=20 ){
+          } else if (hr > 17 && hr <= 20) {
             document.write("Good evening!");
-          }else{
+          } else {
             document.write("Good night!");
           }
           document.write("</font></center>");
