--- a/index.htm
+++ b/index.htm
@@ -113,11 +113,8 @@
   }
 </style>
 
-<body style="margin:0;">
+<body>
 
-  <table>
-    <tr>
-      <td style="border:none;">
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
