--- a/DS.htm
+++ b/DS.htm
@@ -64,10 +64,54 @@ table th {
     </tr>
     <tr>
       <td>M1 L5</td>
-      <td></td>
-      <td><iframe width="150" height="150" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>ARRAY OPERATIONS:Traversing, Inserting, Deleting, Sorting and Searching</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/66ZRH2cfRR0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
-
+    <tr>
+      <td>M1 L6</td>
+      <td> Polynomials and Sparse Matricies.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/f9vjC7FDNBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L7.1</td>
+      <td>Strings and Storing of Strings.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/NDmS7W0MDLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L7.2</td>
+      <td>Different types of Pattern Matching Algorithms.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/4r1PFvtQbIY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>Definition, Stack Operations, Array Representation of Stacks, Stacks using Dynamic Arrays.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/W3-ZUJG7wB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>Polish notation Infix to postfix conversion.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/GPEQidLrgOE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Evaluation of postfix expression</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/mz9XEbAYzrY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4.1</td>
+      <td>Recursion, Factorial</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/BdA4BEZE9Rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4.2</td>
+      <td>GCD, Fibonacci Sequence</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Gvf2cjcrZKY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Tower of Hanoi, Ackerman's function</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/i0akTu-D9cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 
 </body>
