--- a/index.htm
+++ b/index.htm
@@ -117,7 +117,7 @@
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
-          <a href="#">News</a>
+          <a href="DS.htm">DS</a>
           <a href="CONTACT.htm">Contact</a>
         </div>
         <header>
